<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="de.muffinworks.bachelorthesistests.TimerActivity">

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#000000"
        android:text="@string/timerVal" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/timerValue"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_selector_yellow"
        android:text="@string/startButtonLabel" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/timerValue"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_selector_yellow"
        android:text="@string/resetButtonLabel" />

    <Button
        android:id="@+id/addSecondsButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/startButton"
        android:text="@string/addSecondsButtonLabel"/>

    <Button
        android:id="@+id/addMinutesButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/addSecondsButton"
        android:text="@string/addMinutesButtonLabel"/>

    <Button
        android:id="@+id/addHourButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/addMinutesButton"
        android:text="@string/addHourButtonLabel"/>

    <Button
        android:id="@+id/addHoursButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/addHourButton"
        android:text="@string/addHoursButtonLabel"/>

</RelativeLayout>
